[gd_scene load_steps=5 format=3 uid="uid://b6lx6v7vb1xxq"]

[ext_resource type="Script" uid="uid://dh5donp8itt41" path="res://3D/UI.gd" id="1_qui0h"]
[ext_resource type="Texture2D" uid="uid://d1ly4yx7j74vw" path="res://boid_resources/black square.png" id="2_vrfts"]
[ext_resource type="Script" uid="uid://di1rtmv0qort2" path="res://3D/slider_menu.gd" id="3_0mc3e"]
[ext_resource type="PackedScene" uid="uid://c8wwit1eanf54" path="res://3D/slider_menu_part.tscn" id="4_2n5f6"]

[node name="UI" type="CanvasLayer"]
visible = false
script = ExtResource("1_qui0h")

[node name="BoidDataTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
offset_left = 29.0
offset_top = 29.0
offset_right = 162.0
offset_bottom = 162.0
texture = ExtResource("2_vrfts")

[node name="BoidQuatTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
offset_left = 199.0
offset_top = 30.0
offset_right = 331.0
offset_bottom = 162.0
texture = ExtResource("2_vrfts")

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -368.0
offset_top = 31.0
offset_right = -65.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 18
text = "debug lister:"
autowrap_mode = 1

[node name="SliderMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
offset_left = 29.0
offset_top = 182.0
offset_right = 332.0
offset_bottom = 390.0
script = ExtResource("3_0mc3e")

[node name="MarginContainer" type="MarginContainer" parent="SliderMenu"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SliderMenuContainer" type="VBoxContainer" parent="SliderMenu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SliderMenuPart" parent="SliderMenu/MarginContainer/SliderMenuContainer" instance=ExtResource("4_2n5f6")]
layout_mode = 2
